# SpotiGiPiTiFy

./: .cache  .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/commands/: make.py  serve.py
app/models/: spotify_models.py
app/routes/: chat_router.py
app/services/: __agent_service.py  agent_service.py  openai_service.py  spotify_service.py
web/: index.html  package-lock.json  package.json  script.js  tailwind.config.js
web/src/: __script.js  compiled.css  index.html  input.css  script.js
web/src/components/: assistantMessage.js  loadingMessage.js  playlistGridMessage.js  userMessage.js
